--- a/Weather.Droid/Weather.Droid/Weather.Droid.csproj
+++ b/Weather.Droid/Weather.Droid/Weather.Droid.csproj
@@ -54,8 +54,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Films.cs" />
     <Compile Include="MainActivity.cs" />
+    <Compile Include="Models\Film.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
