--- a/Weather.Droid/Weather.Droid/Weather.Droid.csproj
+++ b/Weather.Droid/Weather.Droid/Weather.Droid.csproj
@@ -55,7 +55,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
-    <Compile Include="Models\Film.cs" />
+    <Compile Include="Models\Weather.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
