--- a/Weather.Droid/Weather.Droid/Weather.Droid.csproj
+++ b/Weather.Droid/Weather.Droid/Weather.Droid.csproj
@@ -54,6 +54,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ItemAdapter.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Models\Weather.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
